🩹 Fix: scroll bug
* Fix bug that allows horizontal scrolling after running animation on mobile

--- a/src/assets/sass/components/_main.scss
+++ b/src/assets/sass/components/_main.scss
@@ -38,3 +38,7 @@
     }
   }
 }
+
+#main-wrap {
+  overflow-x: hidden;
+}
